--- a/.golangci.yml
+++ b/.golangci.yml
@@ -9,7 +9,7 @@ linters:
     - revive
     - staticcheck
     - unused
-    - modernize
+    #- modernize
   settings:
     misspell:
       locale: US
