--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -15,6 +15,15 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  lint:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+      - uses: actions/setup-go@v6
+        with:
+          go-version: 1.26.x
+      - uses: golangci/golangci-lint-action@v9
   build:
     name: Test on Go ${{ matrix.go-version }} and ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -61,7 +70,7 @@ jobs:
           mkdir -p ~/.minio/certs/ && cp testdata/localhost.crt ~/.minio/certs/public.crt && cp testdata/localhost.key ~/.minio/certs/private.key
           sudo cp testdata/localhost.crt /usr/local/share/ca-certificates/ && sudo update-ca-certificates
           ./minio server /tmp/test-xl/{1...4}/ & sleep 10
-          make
+          make build
           make test-race
           make verify
           ./functional-tests.sh
